# up-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.ultifi  CMakeLists.txt.up  CMakeUserPresets.json  CONTRIBUTORS.adoc  Changelog  NOTICE.adoc  README.md  conandata.yml  conanfile.py  conanfile.txt  coverage.sh  deleteme.txt  random.txt  ultifi.cmake  up-cpp.code-workspace  uprotocol-core-api.cmake  uprotocol-sdk-cpp.code-workspace  valgrind_exclude_tests.txt
.devcontainer/: Dockerfile
.github/workflows/: build.yml  ci.yml  codeql.yml  coverage-comment-pr.yml  coverage.yml
autogen/: Makefile  UpCoreApi.cpp  UpCoreApi.h  demo.cpp  protobuf_wrapper.py  wrap.py  wrap_text.py
autogen/dll_demo/: FactoryPlugin.hpp  Makefile  my_plugin_api.hpp  my_plugin_sum.cpp  tutorial1.cpp
autogen/v2/: Builder.cpp  Builder.hpp  example.hpp  example_enums.cpp  example_impl.cpp  myidl.proto  simple.cpp  test_example.cpp
checks/: clang-format.sh  clang-tidy.sh
cmake/: FindCGreen.cmake  FindUUID.cmake  up-core-api-protos.cmake
conan-recipes/cci/all/: conandata.yml  conanfile.py
conanFiles/: conanfile.Linux.aarch64.gcc.BuildTests.txt  conanfile.Linux.aarch64.gcc.txt  conanfile.Linux.cross.to.aarch64.gcc.BuildTests.txt  conanfile.Linux.cross.to.aarch64.gcc.txt  conanfile.Linux.x86_64.gcc.BuildTests.txt  conanfile.Linux.x86_64.gcc.txt
conaninfo/: conanfile.txt
docs/design/utils/: CallbackConnection.md
include/binary/: binary_serializer.h
include/factory/: cloud_event_factory.h
include/json/: json_serializer.h
include/memory/: memoryAllocator.h
include/model/: service_type.h  spec_version.h
include/rpc/: RpcClient.h
include/tools/: base64.h  base64.hpp
include/up-cpp/: README.md
include/up-cpp/client/: Notifier.h  Publisher.h  RpcInitiator.h  RpcTarget.h  Subscriber.h
include/up-cpp/communication/: NotificationSink.h  NotificationSource.h  Notifier.h  Publisher.h  RpcClient.h  RpcServer.h  Subscriber.h
include/up-cpp/proto/: CMakeLists.txt
include/up-cpp/rpc/: RpcClient.h
include/up-cpp/tools/: base64.h
include/up-cpp/transport/: Instances.h  UListener.h  URequestListener.h  USubscribeListener.h  UTransport.h
include/up-cpp/utils/: CallbackConnection.h  CyclicQueue.h  Expected.h  IpAddress.h  ProtoConverter.h  SafeMap.h  ThreadPool.h  base64.h  testcase_for_expected.cpp
include/uprotocol-cpp/proto/: CMakeLists.txt  ultifi.cmake
include/uprotocol-cpp/rpc/: RpcClient.h
include/uprotocol-cpp/transport/: UTransport.h
include/uri/: IpAddress.h  LongUriSerializer.h  MicroUriSerializer.h  UAuthority.h  UEntity.h  UResource.h  UUri.h  UriFormat.h  UriSerializer.h  UriValidator.h  up_uri.h  up_uri_factory.h
include/utransport/: UAttributes.h  UListener.h  UMessageType.h  UPayload.h  UPriority.h  USerializationHint.h  UStatus.h  UTransport.h
include/utransport/datamodel/: UAttributes.h  UListener.h  UMessageType.h  UPayload.h  UPriority.h  USerializationHint.h
include/uuid/: UUIDSerializer.h  UUIDv1.h  UUIDv6.h  UUIDv8.h  UUIDv8Factory.h  UuidFactory.h  UuidSerializer.h  Uuidv8Factory.h  uuid.h  uuid_gen.h  uuid_v8.h
lint/: clang-format.sh  clang-tidy.sh  valgrind.sh
proto/: CMakeLists.txt  uuid.proto
src/: CMakeLists.txt
src/base64/: base64.cpp
src/communication/: NotificationSink.cpp  NotificationSource.cpp  Publisher.cpp  RpcClient.cpp  RpcServer.cpp  Subscriber.cpp
src/test/: CMakeLists.txt
src/tools/: base64.cpp
src/transport/: UTransport.cpp
src/uri/: IpAddress.cpp  LongUriSerializer.cpp  MicroUriSerializer.cpp  UriValidator.cpp
src/utils/: IpAddress.cpp  ProtoConverter.cpp  ThreadPool.cpp  base64.cpp
src/uuid/: README.md  UUIDSerializer.cpp  UUIDv1.cpp  UUIDv6.cpp  UUIDv8.cpp  UUIDv8Factory.cpp  UuidSerializer.cpp  Uuidv8Factory.cpp  uuid.cpp  uuid_gen.cpp
test/: CMakeLists.txt  ultifi.cmake
test/binary/: binary_test.cpp  binary_test.cpp_
test/coverage/client/usubscription/v3/: ConsumerTest.cpp  RequestBuilderTest.cpp  RpcClientUSubscriptionTest.cpp  USubscriptionUUriBuilderTest.cpp
test/coverage/communication/: NotificationSinkTest.cpp  NotificationSourceTest.cpp  PublisherTest.cpp  RpcClientTest.cpp  RpcServerTest.cpp  SubscriberTest.cpp
test/coverage/datamodel/: PayloadBuilderTest.cpp  UMessageBuilderTest.cpp  UMessageValidatorTest.cpp  UUriSerializerTest.cpp  UUriValidatorTest.cpp  UuidBuilderTest.cpp  UuidSerializerTest.cpp  UuidValidatorTest.cpp
test/coverage/transport/: UTransportTest.cpp
test/coverage/utils/: CallbackConnectionTest.cpp  CyclicQueueTest.cpp  ExpectedTest.cpp  IpAddressTest.cpp  ThreadPoolTest.cpp  base64Test.cpp
test/extra/: NotificationTest.cpp  PublisherSubscriberTest.cpp  RpcClientServerTest.cpp  UTransportMockTest.cpp
test/factory/: cloud_event_factory_test.cpp
test/include/: UTransportMock.h
test/json/: json_serializer_test.cpp  json_serializer_test.cpp_
test/model/: attributes_test.cpp  attributes_test.cpp_  priority_test.cpp  priority_test.cpp_  serviceType_test.cpp  serviceType_test.cpp_
test/sanitizers/: valgrind_exclude_test_memcheck.txt
test/tools/: base64_test.cpp
test/uri/: LongUriSerializerTest.cpp  MicroUriSerializerTest.cpp  UAuthorityTest.cpp  UEntityTest.cpp  UResourceTest.cpp  UUriTest.cpp  up_uri_factory_test.cpp  up_uri_test.cpp  uri_authority_test.cpp  uri_entity_test.cpp
test/uri/builder/: UAuthorityTest.cpp  UEntityTest.cpp  UResourceTest.cpp  UUriTest.cpp
test/uri/datamodel/: UAuthorityTest.cpp  UEntityTest.cpp  UResourceTest.cpp  UUriTest.cpp
test/uri/serializer/: LongUriSerializerTest.cpp  MicroUriSerializerTest.cpp
test/uri/tools/: IpAddressTest.cpp
test/uri/validator/: UriValidatorTest.cpp
test/utransport/: uattributes_test.cpp  umessagetypes_test.cpp  upayload_test.cpp  upriority_test.cpp  userializationhint_test.cpp
test/uuid/: uuid_test.cpp  uuid_v6_test.cpp  uuid_v8_test.cpp
uprotocol/proto/: CMakeLists.txt
uprotocol/rpc/: RpcClient.h
uprotocol/tools/: base64.h  byte_order.cpp  tools.h
uprotocol/transport/: UTransport.h
uprotocol/uuid/: random_gen.h  uuid_gen.h
(+155 files in other folders)
