cmake_minimum_required(VERSION 3.18)

INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
protobuf_generate_cpp(PROTO_SRC PROTO_HEADER cloudevents.proto)
ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})
target_link_libraries(proto ${Protobuf_LIBRARIES})
protobuf_generate_cpp(PROTO_UUID_SRC PROTO_UUID_HEADER ../../uprotocol-core-api/src/main/proto/uuid.proto)
ADD_LIBRARY(protouuid ${PROTO_UUID_HEADER} ${PROTO_UUID_SRC})
target_link_libraries(protouuid ${Protobuf_LIBRARIES})